@@ -40,6 +40,7 @@ Changes:
 - Add ability to configure multiple iSCSI LUNs. (disk type only)
 - Add ability to configure multiple portal/initiator group.
 - Add ability to configure HAST volume as iSCSI extent.
+- Add ability to configure bind interface of CIFS/SMB.
 - Add ability to edit power mode and CPU frequency.
 - Add ability to edit write cache mode on iSCSI target.
 - Add ability to edit upload directory of webserver.
